--- a/front/src/main/webapp/signup-ue.html
+++ b/front/src/main/webapp/signup-ue.html
@@ -48,14 +48,14 @@
             <div class="half">
               <div class="left"><br></div>
               <div class="right">
-                <button type="submit" class="btn"><i class='fa fa-save'></i> Guardar			</button>
+                <button type="submit" class="btn"><i class='fa fa-save'></i> Guardar</button>
               </div>
             </div>
           </div>
         </div>
         <div class="panel-signup">
           <div class="container">
-            <form action="#" class="form">
+            <form action="unidadEconomica" method="post" class="form">
               <fieldset>
                 <legend>Información de la empresa</legend>
                 <dl class="question">
@@ -65,7 +65,7 @@
                   <dd class="answers">
                     <ul>
                       <li class="input-text">
-                        <input type="text">
+                        <input type="text" name="nombre">
                       </li>
                     </ul>
                   </dd>
@@ -77,7 +77,7 @@
                   <dd class="answers">
                     <ul>
                       <li class="input-text">
-                        <input type="text">
+                        <input type="text" name="razonSocial">
                       </li>
                     </ul>
                   </dd>
@@ -89,7 +89,7 @@
                   <dd class="answers">
                     <ul>
                       <li class="input-text">
-                        <input type="text">
+                        <input type="text" name="claseActividad">
                       </li>
                     </ul>
                   </dd>
@@ -103,13 +103,13 @@
                       <li class="input-select">
                         <select>
                           <option disabled selected>Seleciona el personal ocupado en la empresa</option>
-                          <option>0 a 5 personas</option>
-                          <option>6 a 10 personas</option>
-                          <option>11 a 30 personas</option>
-                          <option>31 a 50 personas</option>
-                          <option>51 a 100 personas</option>
-                          <option>101 a 250 personas</option>
-                          <option>251 y más personas</option>
+                          <option value="1">0 a 5 personas</option>
+                          <option value="2">6 a 10 personas</option>
+                          <option value="3">11 a 30 personas</option>
+                          <option value="4">31 a 50 personas</option>
+                          <option value="5">51 a 100 personas</option>
+                          <option value="6">101 a 250 personas</option>
+                          <option value="7">251 y más personas</option>
                         </select>
                       </li>
                     </ul>
@@ -173,92 +173,92 @@
                   <dd class="answers">
                     <ul>
                       <li class="input-select">
-                        <select>													
+                        <select>
                           <option disabled selected>Seleciona tu municipio</option>
-                          <option>Acatlán</option>
-                          <option>Acaxochitlán</option>
-                          <option>Actopan</option>
-                          <option>Agua Blanca de Iturbide</option>
-                          <option>Ajacuba</option>
-                          <option>Alfajayucan</option>
-                          <option>Almoloya</option>
-                          <option>Apan</option>
-                          <option>El Arenal</option>
-                          <option>Atitalaquia</option>
-                          <option>Atlapexco</option>
-                          <option>Atotonilco el Grande</option>
-                          <option>Atotonilco de Tula</option>
-                          <option>Calnali</option>
-                          <option>Cardonal</option>
-                          <option>Cuautepec de Hinojosa</option>
-                          <option>Chapantongo</option>
-                          <option>Chapulhuacán</option>
-                          <option>Chilcuautla</option>
-                          <option>Eloxochitlán</option>
-                          <option>Emiliano Zapata</option>
-                          <option>Epazoyucan</option>
-                          <option>Francisco I. Madero</option>
-                          <option>Huasca de Ocampo</option>
-                          <option>Huautla</option>
-                          <option>Huazalingo</option>
-                          <option>Huehuetla</option>
-                          <option>Huejutla de Reyes</option>
-                          <option>Huichapan</option>
-                          <option>Ixmiquilpan</option>
-                          <option>Jacala de Ledezma</option>
-                          <option>Jaltocán</option>
-                          <option>Juárez Hidalgo</option>
-                          <option>Lolotla</option>
-                          <option>Metepec</option>
-                          <option>San Agustín Metzquititlán</option>
-                          <option>Metztitlán</option>
-                          <option>Mineral del Chico</option>
-                          <option>Mineral del Monte</option>
-                          <option>La Misión</option>
-                          <option>Mixquiahuala de Juárez</option>
-                          <option>Molango de Escamilla</option>
-                          <option>Nicolás Flores</option>
-                          <option>Nopala de Villagrán</option>
-                          <option>Omitlán de Juárez</option>
-                          <option>San Felipe Orizatlán</option>
-                          <option>Pacula</option>
-                          <option>Pachuca de Soto</option>
-                          <option>Pisaflores</option>
-                          <option>Progreso de Obregón</option>
-                          <option>Mineral de la Reforma</option>
-                          <option>San Agustín Tlaxiaca</option>
-                          <option>San Bartolo Tutotepec</option>
-                          <option>San Salvador</option>
-                          <option>Santiago de Anaya</option>
-                          <option>Santiago Tulantepec de Lugo Guerrero</option>
-                          <option>Singuilucan</option>
-                          <option>Tasquillo</option>
-                          <option>Tecozautla</option>
-                          <option>Tenango de Doria</option>
-                          <option>Tepeapulco</option>
-                          <option>Tepehuacán de Guerrero</option>
-                          <option>Tepeji del Río de Ocampo</option>
-                          <option>Tepetitlán</option>
-                          <option>Tetepango</option>
-                          <option>Villa de Tezontepec</option>
-                          <option>Tezontepec de Aldama</option>
-                          <option>Tianguistengo</option>
-                          <option>Tizayuca</option>
-                          <option>Tlahuelilpan</option>
-                          <option>Tlahuiltepa</option>
-                          <option>Tlanalapa</option>
-                          <option>Tlanchinol</option>
-                          <option>Tlaxcoapan</option>
-                          <option>Tolcayuca</option>
-                          <option>Tula de Allende</option>
-                          <option>Tulancingo de Bravo</option>
-                          <option>Xochiatipan</option>
-                          <option>Xochicoatlán</option>
-                          <option>Yahualica</option>
-                          <option>Zacualtipán de Ángeles</option>
-                          <option>Zapotlán de Juárez</option>
-                          <option>Zempoala</option>
-                          <option>Zimapán</option>
+                          <option value="1">Acatlán</option>
+                          <option value="2">Acaxochitlán</option>
+                          <option value="3">Actopan</option>
+                          <option value="4">Agua Blanca de Iturbide</option>
+                          <option value="5">Ajacuba</option>
+                          <option value="6">Alfajayucan</option>
+                          <option value="7">Almoloya</option>
+                          <option value="8">Apan</option>
+                          <option value="9">El Arenal</option>
+                          <option value="10">Atitalaquia</option>
+                          <option value="11">Atlapexco</option>
+                          <option value="12">Atotonilco el Grande</option>
+                          <option value="13">Atotonilco de Tula</option>
+                          <option value="14">Calnali</option>
+                          <option value="15">Cardonal</option>
+                          <option value="16">Cuautepec de Hinojosa</option>
+                          <option value="17">Chapantongo</option>
+                          <option value="18">Chapulhuacán</option>
+                          <option value="19">Chilcuautla</option>
+                          <option value="20">Eloxochitlán</option>
+                          <option value="21">Emiliano Zapata</option>
+                          <option value="22">Epazoyucan</option>
+                          <option value="23">Francisco I. Madero</option>
+                          <option value="24">Huasca de Ocampo</option>
+                          <option value="25">Huautla</option>
+                          <option value="26">Huazalingo</option>
+                          <option value="27">Huehuetla</option>
+                          <option value="28">Huejutla de Reyes</option>
+                          <option value="29">Huichapan</option>
+                          <option value="30">Ixmiquilpan</option>
+                          <option value="31">Jacala de Ledezma</option>
+                          <option value="32">Jaltocán</option>
+                          <option value="33">Juárez Hidalgo</option>
+                          <option value="34">Lolotla</option>
+                          <option value="35">Metepec</option>
+                          <option value="36">San Agustín Metzquititlán</option>
+                          <option value="37">Metztitlán</option>
+                          <option value="38">Mineral del Chico</option>
+                          <option value="39">Mineral del Monte</option>
+                          <option value="40">La Misión</option>
+                          <option value="41">Mixquiahuala de Juárez</option>
+                          <option value="42">Molango de Escamilla</option>
+                          <option value="43">Nicolás Flores</option>
+                          <option value="44">Nopala de Villagrán</option>
+                          <option value="45">Omitlán de Juárez</option>
+                          <option value="46">San Felipe Orizatlán</option>
+                          <option value="47">Pacula</option>
+                          <option value="48">Pachuca de Soto</option>
+                          <option value="49">Pisaflores</option>
+                          <option value="50">Progreso de Obregón</option>
+                          <option value="51">Mineral de la Reforma</option>
+                          <option value="52">San Agustín Tlaxiaca</option>
+                          <option value="53">San Bartolo Tutotepec</option>
+                          <option value="54">San Salvador</option>
+                          <option value="55">Santiago de Anaya</option>
+                          <option value="56">Santiago Tulantepec de Lugo Guerrero</option>
+                          <option value="57">Singuilucan</option>
+                          <option value="58">Tasquillo</option>
+                          <option value="59">Tecozautla</option>
+                          <option value="60">Tenango de Doria</option>
+                          <option value="61">Tepeapulco</option>
+                          <option value="62">Tepehuacán de Guerrero</option>
+                          <option value="63">Tepeji del Río de Ocampo</option>
+                          <option value="64">Tepetitlán</option>
+                          <option value="65">Tetepango</option>
+                          <option value="66">Villa de Tezontepec</option>
+                          <option value="67">Tezontepec de Aldama</option>
+                          <option value="68">Tianguistengo</option>
+                          <option value="69">Tizayuca</option>
+                          <option value="70">Tlahuelilpan</option>
+                          <option value="71">Tlahuiltepa</option>
+                          <option value="72">Tlanalapa</option>
+                          <option value="73">Tlanchinol</option>
+                          <option value="74">Tlaxcoapan</option>
+                          <option value="75">Tolcayuca</option>
+                          <option value="76">Tula de Allende</option>
+                          <option value="77">Tulancingo de Bravo</option>
+                          <option value="78">Xochiatipan</option>
+                          <option value="79">Xochicoatlán</option>
+                          <option value="80">Yahualica</option>
+                          <option value="81">Zacualtipán de Ángeles</option>
+                          <option value="82">Zapotlán de Juárez</option>
+                          <option value="83">Zempoala</option>
+                          <option value="84">Zimapán</option>
                         </select>
                       </li>
                     </ul>
